--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: node-app-deployment-master
+  name: node-app-deployment-develop
   namespace: kubernetes-cluster-tarungarg02
   labels:
-    app: node-app-master
+    app: node-app-develop
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: node-app-master
+      app: node-app-develop
   template:
     metadata:
       labels:
-        app: node-app-master
+        app: node-app-develop
     spec:
       containers:
-        - name: node-app-master
-          image: tarungarg1208/nagp-devops-assign-2:master-latest
+        - name: node-app-develop
+          image: tarungarg1208/nagp-devops-assign-2:develop-latest
           ports:
             - name: http
               containerPort: 7100
@@ -26,14 +26,14 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: node-app-service-master
+  name: node-app-service-develop
   namespace: kubernetes-cluster-tarungarg02
 spec:
   type: NodePort
   selector: 
-    app: node-app-master
+    app: node-app-develop
   ports:
     - protocol: TCP
-      nodePort: 30157
+      nodePort: 30158
       targetPort: 7100
       port: 7100
